force-app/main/default/objects/Youtube_Video_Detail__c/fields/Favourite__c.field-meta.xml
<CustomField>
    <fullName>Favourite__c</fullName>
    <label>Favourite</label>
    <type>TextArea</type>
</CustomField>