force-app/main/default/objects/Youtube_Video_Detail__c/fields/Number_of_Likes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Likes__c</fullName>
    <label>Number of Likes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>