force-app/main/default/objects/Youtube_Video_Detail__c/fields/Video_ID__c.field-meta.xml
<CustomField>
    <fullName>Video_ID__c</fullName>
    <label>Video ID</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>