force-app/main/default/objects/Youtube_Video_Detail__c/fields/Youtube_Video_Name__c.field-meta.xml
<CustomField>
    <fullName>Youtube_Video_Name__c</fullName>
    <label>Youtube Video Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>